# Flora-Spire

./: CMakeLists.txt  README.md
Flora_Spire_Code/: animation - Copy.h  entity.cpp  game.h  main.cpp  player.cpp  player.h
Flora_Spire_Code/components/: cmp_follow_pos.cpp  cmp_hut_player.cpp  cmp_melee.cpp  cmp_player_attack.cpp  cmp_player_attack.h  cmp_sprite.h  cmp_text_list.cpp  stdafx.h
Flora_Spire_Code/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp  scene_menu.cpp  scene_menu.h  scene_option.cpp  scene_options.cpp  scene_options.h
engine/: engine.cpp  engine.h
flora_spire/: Tile_Manager.cpp  Tile_Manager.h  Tiles.cpp  Tiles.h  animation.h  game.h  main.cpp  save.cpp  save.h
flora_spire/components/: cmp_blinking.h  cmp_enemy_turret.cpp  cmp_follow_pos.cpp  cmp_follow_pos.h  cmp_hurt_player.h  cmp_hut_player.cpp  cmp_melee.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.cpp  cmp_text.h  cmp_text_list.cpp
flora_spire/scenes/: scene2_level1.cpp  scene2_level1.h  scene2_level2.cpp  scene2_level2.h  scene2_level3.cpp  scene2_level3.h  scene2_level4.cpp  scene2_level4.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level3.cpp  scene_level4.cpp  scene_level4.h  scene_level5.cpp  scene_level5.h  scene_level6.cpp  scene_level6.h  scene_menu.cpp  scene_menu.h  scene_options.h  scene_victory.cpp  scene_victory.h
lib/sfml/include/SFML/Graphics/: PrimitiveType.hpp  Rect.hpp
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.cpp  maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
res/Flora-Spire-Levels/Level 1/: 1_1.txt  1_2.txt  1_3.txt  1_4.txt  1_5.txt  1_6.txt  1_7.txt  1_8.txt  1_SECRET.txt
res/Flora-Spire-Levels/Level 2/: 2_1.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  2_7.txt  2_8.txt
res/levels/: 1_1.txt  1_2.txt  1_3.txt  1_4.txt  1_5.txt  1_6.txt  1_7.txt  1_8.txt  2_1.txt  2_2.txt  2_3.txt  2_4.txt  2_6.txt  2_7.txt  level_1.txt  level_2.txt  level_3.txt  maze.txt  maze_2.txt  testing_level.txt
